--- a/PollPulse/polls/templates/polls/login.html
+++ b/PollPulse/polls/templates/polls/login.html
@@ -1,15 +1,28 @@
 {% extends 'polls/base.html' %}
 {% block content %}
-<h2>Login</h2>
-{% if error %}
-  <p class="error">{{ error }}</p>
-{% endif %}
-<form method="post" class="form">
-  {% csrf_token %}
-  <label for="username">Username:</label>
-  <input type="text" name="username" id="username" required><br>
-  <label for="password">Password:</label>
-  <input type="password" name="password" id="password" required><br>
-  <button type="submit">Login</button>
-</form>
+<div class="row justify-content-center">
+  <div class="col-md-6 col-lg-5">
+    <div class="card shadow">
+      <div class="card-body">
+        <h3 class="mb-4 text-center">🔐 Login to PollPulse</h3>
+        {% if error %}
+          <div class="alert alert-danger">{{ error }}</div>
+        {% endif %}
+        <form method="post">
+          {% csrf_token %}
+          <div class="mb-3">
+            <label for="username" class="form-label">Username</label>
+            <input type="text" name="username" id="username" class="form-control" required>
+          </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input type="password" name="password" id="password" class="form-control" required>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Login</button>
+        </form>
+        <p class="mt-3 text-center">Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
