--- a/QuizQuest/quiz/templates/quiz/login.html
+++ b/QuizQuest/quiz/templates/quiz/login.html
@@ -1,16 +1,44 @@
 {% extends 'quiz/base.html' %}
+
 {% block content %}
-<div class="container">
-  <h2 class="mb-4">Login</h2>
-  <div class="card">
-    <div class="card-body">
-      <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Login</button>
-      </form>
+<div class="row justify-content-center mt-5">
+  <div class="col-md-6">
+    <div class="card shadow">
+      <div class="card-header bg-primary text-white text-center">
+        <h4 class="mb-0">Login to QuizQuest</h4>
+      </div>
+      <div class="card-body">
+        <form method="post">
+          {% csrf_token %}
+
+          {% if form.non_field_errors %}
+            <div class="alert alert-danger">
+              {{ form.non_field_errors }}
+            </div>
+          {% endif %}
+
+          <div class="mb-3">
+            <label for="id_username" class="form-label">Username</label>
+            <input type="text" name="username" class="form-control" id="id_username"
+                   value="{{ form.username.value|default_if_none:'' }}">
+            {{ form.username.errors }}
+          </div>
+
+          <div class="mb-3">
+            <label for="id_password" class="form-label">Password</label>
+            <input type="password" name="password" class="form-control" id="id_password">
+            {{ form.password.errors }}
+          </div>
+
+          <div class="d-grid">
+            <button type="submit" class="btn btn-primary">Login</button>
+          </div>
+        </form>
+      </div>
     </div>
+    <p class="text-center mt-3">
+      Don't have an account? <a href="{% url 'signup' %}">Sign Up</a>
+    </p>
   </div>
-  <p class="mt-3">Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
 </div>
 {% endblock content %}
