--- a/eventease/templates/includes/navbar.html
+++ b/eventease/templates/includes/navbar.html
@@ -5,7 +5,7 @@
     <div class="logo">
       <a href="{% url 'home' %}">
         <img src="{% static 'images/logo.jpeg' %}" alt="EventEase Logo" height="40">
-        <span>EventEase</span>
+<!--        <span>EventEase</span>-->
       </a>
     </div>
 
